content/stylesheets/layout.css
html, body {
    margin: 0;
    padding: 0;
    min-width: 100%;
    width: 100%;
    max-width: 100%;
    min-height: 100%;
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    -moz-text-size-adjust: 100%;
    color: #ffffff;
    text-decoration: none;
    text-shadow: none;
    background: linear-gradient(165deg, #2178D1 0%, #7FB4C7 100%);
}

a, a:visited, a:active, a:hover {
    color: #ffffff;
    text-decoration: none;
    text-shadow: none;
    margin: 0;
    padding: 0;
    border: 0
}

a:hover {
    cursor:pointer
}

hr {
    margin-top: 20px;
    margin-bottom: 20px;
    border: 0;
    border-top-color: currentcolor;
    border-top-style: none;
    border-top-width: 0px;
    border-top: 1px solid #ffffff;
}

.header {
    height: 60px;
    background: #ffffff;    
}

.header .brand {
    float: left;    
    margin-top: 10px;
}

.header .brand img {
    width: 200px;
}

.container, .header-nav {
    padding: 0;
    margin: 0 auto;
}

.nav {
    height: 50px;
    margin: 0 auto;
}

.sidebar {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
}

ul.menu {
    display: none;
}

ul.menu, ul.sub-menu {
    list-style: none;
    padding-left: 0;
    margin-bottom: 0;
}

ul.sub-menu {
    visibility: hidden;
    opacity: 0;
    transition: all 0.3s linear;
    max-height: 0;
}

ul.sub-menu.expand {
    visibility: visible;
    opacity: 1;
    max-height: 500px;
}

ul.menu li {
    display: block;
    padding: 5px;
}

a.sub-menu-link.expand::after {
    transform: rotate(135deg);
}

.content {
    background-color: rgba(0,0,0,0.7);
    padding: 10px 20px;
}

.header-nav, .nav {
    width: 100%;
}

.toggle-button {
    position: relative;
    float: right;
    background-color: #ffffff;
    border: #2178D1 2px solid;
    border-radius: 5px;
    cursor: pointer;
    margin: 10px 10px 0 0;
}

.toggle-button div {
    width: 20px;
    height: 2px;
    background-color: #2178D1;
    margin: 5px 0;
}

a.brand, .branding {
    width: 300px;
}

.nav.expand ul.menu {
    padding-top: 0;
    border:#2178D1 2px solid;
    position: relative;
    top: 15px;
}

.nav.expand ul.menu {
    display: block;
    clear: both;
    padding-top: 0;
}

ul.menu {
    background-color: #363331;
}

.nav.expand ul.menu li {    
    background-color: #ffffff;
}

.nav.expand ul.menu li a {
    color: #363331;
}

a.sub-menu-link::after {
    border-style: solid;
    border-width: 0.25em 0.25em 0 0;
    content: '';
    display: inline-block;
    height: 0.45em;
    left: 0.15em;
    position: relative;
    top: 0.15em;
    transform: rotate(45deg);
    vertical-align: top;
    width: 0.45em;
    transition: all 0.5s ease;
    color: #2178D1;
}

@media (min-width: 768px) {
    .container, .header-nav {
        padding: 0 15px;
    }

    .container, .header-nav, .nav {
        width: 720px;
    }
}

@media (min-width: 992px) {
    .container, .header-nav {
        width: 970px;
    }

    .content {
        float: left;
        width: 65%;
        margin-top: 0px;
    }

    .sidebar {
        float: left;
        position: initial; 
        padding: 20px;
    }

    ul.menu {
        display: block;
        margin: 0;
        background: none;
    }

    #btnMenuToggle {
        display: none;
    }

    .nav, a.brand, .branding {
        width: 250px;
    }

    .nav.expand ul.menu {
        border: none;
        position: initial;
        padding-top: 0;
        color: #ffffff;
    }

    .nav.expand ul.menu li {    
        background-color: transparent;
    }
    
    .nav.expand ul.menu li a {
        color: #ffffff;
    }

    a.sub-menu-link::after {
        color: #ffffff;
    }
}

@media (min-width: 1200px) {
    .container, .header-nav {
        width: 1170px;
    }

    .nav a.brand, .branding {
        width: 300px;
    }
}















#parallax-lvl-0, #parallax-lvl-1, #parallax-lvl-2, #parallax-lvl-3 {
    position: absolute;
    top: 0;
}

#parallax-lvl-0 {
    z-index: -1
}

#parallax-lvl-1 {
    z-index: -1
}

#parallax-lvl-2 {
    z-index: -1
}

#parallax-lvl-3 {
    z-index: -1;
}
  
  
  .cloud {    
    position: absolute;
    opacity: 0.7;
    background-size: contain;
    background-repeat: no-repeat;
  }

  .size1 {
    width:100px;
    height:100px;
  }
  .size2 {
    width:200px;
    height:200px;
  }
  .size3 {
    width:300px;
    height:300px;
  }
  .size4 {
    width:400px;
    height:400px;
  }
  
  .cloud1 {
    background-image: url("/content/images/cloud1.png");
  }

  .cloud2 {
    background-image: url("/content/images/cloud2.png");
  }

  .cloud3 {
    background-image: url("/content/images/cloud3.png");
  }

